# ChangeLog for net-p2p/ed2k-gtk-gui
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k-gtk-gui/Attic/ChangeLog,v 1.11 2004/10/27 15:07:34 lanius Exp $

  27 Oct 2004; <heino@gentoo.org> ed2k-gtk-gui-0.6.3.ebuild:
  stable on x86

*ed2k-gtk-gui-0.6.3 (11 Sep 2004)

  11 Sep 2004; Heinrich Wendel <lanius@gentoo.org> +ed2k-gtk-gui-0.6.3.ebuild:
  version bump

  07 Jul 2004; Travis Tilley <lv@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  stable on amd64

  19 Jun 2004; Jon Hood <squinky86@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  add gtk-doc to the dependencies irt #54504, thanks to Bastian Voigt
  <bavoigt@inf.fu-berlin.de>

  02 Jun 2004; Jon Hood <squinky86@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  stable on x86

  05 May 2004; Travis Tilley <lv@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  added ~amd64 keyword

  28 Apr 2004; Jon Hood <squinky86@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  remove dependency on overnet (#49312)

*ed2k-gtk-gui-0.6.2 (21 Apr 2004)

  21 Apr 2004; Jon Hood <squinky86@gentoo.org> ed2k-gtk-gui-0.6.2.ebuild:
  Initial commit, thanks to ares <ares@serversecurity.org>, #48525