@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ed2k-gtk-gui
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k-gtk-gui/Attic/ChangeLog,v 1.11 2004/10/27 15:07:34 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k-gtk-gui/Attic/ChangeLog,v 1.12 2004/12/09 18:46:32 squinky86 Exp $
+
+  09 Dec 2004; Jon Hood <squinky86@gentoo.org> ed2k-gtk-gui-0.6.3.ebuild:
+  Remove gtk-doc dependency, #70484.
 
   27 Oct 2004; <heino@gentoo.org> ed2k-gtk-gui-0.6.3.ebuild:
   stable on x86
